--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,47 @@
 {
-    "name": "insign/laravel-decaptcha",
-    "description": "A Laravel package for captcha recognition for popular services like rucaptcha.com, 2captcha.com, pixodrom.com, captcha24.com, socialink.ru, anti-captcha.com",
-    "keywords": [
-        "curl",
-        "php",
-        "laravel",
-        "captcha",
-        "recognition",
-      "2captcha.com",
-        "rucaptcha.com",
-        "pixodrom.com",
-        "captcha24.com",
-        "socialink.ru",
-        "rucaptcha",
-        "2captcha",
-        "pixodrom",
-        "captcha24",
-        "socialink",
-        "anti-captcha.com",
-        "anti-captcha"
-    ],
-    "type": "project",
-    "authors": [
-        {
-            "name": "Hélio Araújo de Oliveira",
-            "email": "insign+laravel-decaptcha@gmail.com"
-        }
-    ],
-  "minimum-stability": "stable",
-    "require": {
-        "php": ">=5.5.0"
-    },
-    "autoload": {
-        "classmap": [
-            "src/"
-        ],
-        "psr-4": {
-            "insign\\laravel_decaptcha\\": "src/"
-        }
-    },
-    "license": "MIT",
-    "support": {
-        "issues": "https://github.com/insign/laravel-decaptcha/issues?state=open",
-        "source": "https://github.com/insign/laravel-decaptcha"
+  "name": "insign/laravel-decaptcha",
+  "description": "A Laravel package for captcha recognition for popular services like rucaptcha.com, 2captcha.com, pixodrom.com, captcha24.com, socialink.ru, anti-captcha.com",
+  "keywords": [
+    "curl",
+    "php",
+    "laravel",
+    "captcha",
+    "recognition",
+    "2captcha.com",
+    "rucaptcha.com",
+    "pixodrom.com",
+    "captcha24.com",
+    "socialink.ru",
+    "rucaptcha",
+    "2captcha",
+    "pixodrom",
+    "captcha24",
+    "socialink",
+    "anti-captcha.com",
+    "anti-captcha"
+  ],
+  "type": "project",
+  "authors": [
+    {
+      "name": "Hélio Araújo de Oliveira",
+      "email": "insign+laravel-decaptcha@gmail.com"
     }
+  ],
+  "minimum-stability": "stable",
+  "require": {
+    "php": ">=5.5.0"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ],
+    "psr-4": {
+      "insign\\LaravelDecaptcha\\": "src/"
+    }
+  },
+  "license": "MIT",
+  "support": {
+    "issues": "https://github.com/insign/laravel-decaptcha/issues?state=open",
+    "source": "https://github.com/insign/laravel-decaptcha"
+  }
 }
