--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "insign/laravel-decaptcha",
+  "name": "byver/laravel-decaptcha",
   "description": "A Laravel package for captcha recognition for popular services like rucaptcha.com, 2captcha.com, pixodrom.com, captcha24.com, socialink.ru, anti-captcha.com",
   "keywords": [
     "curl",
@@ -30,8 +30,8 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.5.9",
-    "illuminate/config": "~5.1 || ~5.2 || ~5.3",
-    "illuminate/support": "~5.1 || ~5.2 || ~5.3"
+    "illuminate/config": "*",
+    "illuminate/support": "*"
   },
   "autoload": {
     "classmap": [
